Fixed XSS vulnerability with react-md-editor.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.15.3",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.14.3",
+    "rehype-sanitize": "^5.0.0",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
